# epicsdev_lecroy

./: README.md  pyproject.toml
config/: epicsScope_pp.py  epicsdev_lecroy_pp.py
epicsdev_lecroy/: __main__.py
